# hackers

./: .gitignore  Cargo.toml  Debug Animation Spinning.md  Implementing Scriptable Animations.md  README.md  check_example.txt  check_log.txt  check_output.txt  check_output_2.txt  check_output_final.txt  output.txt  run_error.txt  runner_settings.json
assets/images/missiles/FrozenOrb/: sprite.json
assets/images/monster_ui/world_healthbar/: sprite.json
assets/images/monsters/chucky/: sprite.json
assets/images/monsters/gloam/: sprite.json
assets/images/test/boom/: sprite.json
assets/images/test/nod/: sprite.json
assets/images/ui/: New shortcut.lnk
examples/: check_dims.rs  egui_standalone.rs  imgui_dll_runner.rs
examples/example_dll/: Cargo.toml
examples/example_dll/src/: lib.rs
examples/example_dll2/: Cargo.toml
examples/example_dll2/src/: lib.rs
examples/image_test_dll/: Cargo.toml  build_log.txt  check_log_2.txt  check_log_3.txt
examples/image_test_dll/src/: lib.rs  map.rs  player.rs  player_types.rs
examples/rpg_client/: Cargo.toml
examples/rpg_client/src/: lib.rs  map.rs  player.rs  projectile.rs
examples/runner_modules/: event_handler.rs  host_ui.rs  imgui_context.rs  mod.rs  plugin_ui.rs  runner_host.rs  texture_manager.rs  wgpu_setup.rs
hackers_derive/: Cargo.toml
hackers_derive/src/: lib.rs
src/: debug.rs  lib.rs  macros.rs  settings.rs  structview.rs
src/gui/: color.rs  context.rs  editor.rs  fonts.rs  hotkey_manager.rs  imgui_backend.rs  mod.rs  render.rs  repro.rs  sizes.rs  traits.rs  types.rs  widgets.rs
src/hackrs/: access.rs  access_methods.rs  hack.rs  metadata.rs  mod.rs  runtime_sync.rs  stable_abi.rs  sync.rs
src/hackrs/HaCKS/: events.rs  iteration.rs  lifecycle.rs  mod.rs  persistence.rs  registry.rs  search.rs  sorting.rs  update.rs
src/host/: mod.rs  plugin_manager.rs  runner.rs  ui.rs
src/impl_backends/: egui_backend.rs  imgui_backend.rs  mod.rs
src/sprites/: animation_utils.rs  dc6_loader.rs  images.rs  images_test.rs  mod.rs
src/sprites/animation docs/: _meta.json  build-manifest.js  docs-manifest.json  generate-static-index.js  index.html  package-lock.json  package.json  setup_guide.md  sprite-config.html
src/state_tracker/: global_tracker.rs  gui_integration.rs  mod.rs  module_states.rs  statetracker.rs  tracked_module.rs  ux_statetracker.rs
tests/: dynamic_loading.rs
(+23 files in other folders)
