[package]
name = "hackers"
version = "0.0.1"
edition = "2021"
authors = ["t3o <t3o84@proton.me>"]
license = "AGPL-3.0-or-later"
description = "module runtime framework"
repository = "https://github.com/tthreeoh/hackers"
readme = "README.md"
keywords = ["modding"]
categories = ["development"]


[dependencies]
hackers_derive = { path = "./hackers_derive" }
imgui = { version = "0.12", features = [
    "tables-api",
], optional = true } # HARD VERSION DEPENDENCY
hudhook = { git = "https://github.com/veeenu/hudhook.git", rev = "6a5c2ad34e9687f6426d7a38831d4411ca36023a" }
egui = { version = "0.28", optional = true }
eframe = { version = "0.28", optional = true }
image = { version = "0.25.6", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
erased-serde = "0.4"
heck = "0.5"
preferences-ron = "2.0.1"
smallvec = { version = "1.15", features = [
    "const_generics",
    "const_new",
    "specialization",
    "write",
] }
lazy_static = "1.5.0"
log = "0.4"
linked_hash_set = "0.1.5"
once_cell = "1.21"
regex = "1.11.1"
num_enum = "0.7.4"
widestring = "1.2"
winapi = { version = "0.3", features = ["xinput"] }
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Environment",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }
ndarray = "0.16"
tracing = { version = "0.1.41", features = ["log"] }
libloading = "0.8"
anyhow = "1.0"
ron = "0.11.0"
strum = { version = "0.26", features = ["derive"] }
abi_stable = "0.11.3"
copypasta = "0.10"

[features]
default = ["ui-imgui"]                # Keep imgui as default for backward compat
ui-imgui = ["dep:imgui", "dep:image"]
ui-egui = ["dep:egui", "dep:eframe"]
ui = []                               # Base UI feature flag

gui = ["dep:imgui", "dep:image"] #legacy

[[example]]
name = "imgui_dll_runner"
required-features = ["ui-imgui"]

[[example]]
name = "egui_standalone"
required-features = ["ui-egui"]

[dev-dependencies]
glium = "0.34"
imgui-glium-renderer = "0.12"
imgui-winit-support = "0.12"
winit = { version = "0.29", default-features = false, features = ["rwh_05"] }
wgpu = "25"
pollster = "0.3"
imgui-wgpu = "0.25"
